--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,7 +47,7 @@
     </div>
     {% endif %}
   </div>
-	{% include gitalk.html %}
+<!--	{% include gitalk.html %} -->
   <section class="author-detail">
     <section class="post-footer-item author-card">
       <div class="avatar">
